dist/templating/k8/deploy/k8-deployment-decc-template.yaml
# Copyright 2019-2023 VMware, Inc.
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-report-${REPORT_TAG}-deployment
spec:
  selector:
    matchLabels:
      app: audit-report-${REPORT_TAG}-app
  replicas: 1
  template:
    metadata:
      labels:
        app: audit-report-${REPORT_TAG}-app
    spec:
      containers:
      - name: audit-report-${REPORT_TAG}
        image: ${IMG_NAME}
        ports:
        - containerPort: 80
          name: http
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
          limits:
            memory: "1024Mi"
            cpu: "100m"
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: audit-report-${REPORT_TAG}-service
spec:
  selector:
    app: audit-report-${REPORT_TAG}-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audit-report-${REPORT_TAG}-ingress
spec:
  rules:
    - host: ${TARGET_HOST}
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: audit-report-${REPORT_TAG}-service
              port:
                number: 80
