dist/templating/k8/deploy/k8-deployment-with-host-template.yaml
# Copyright 2019-2024 VMware, Inc.
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-report-${REPORT_TAG}-deployment
spec:
  selector:
    matchLabels:
      app: audit-report-${REPORT_TAG}
  replicas: 1
  template:
    metadata:
      labels:
        app: audit-report-${REPORT_TAG}
    spec:
      containers:
      - name: audit-report-${REPORT_TAG}
        image: ${IMG_NAME}
        ports:
        - containerPort: 8080
          name: http
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
          limits:
            memory: "1024Mi"
            cpu: "100m"
---
kind: Service
apiVersion: v1
metadata:
  name: audit-report-${REPORT_TAG}-service
spec:
  selector:
    app: audit-report-${REPORT_TAG}
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: audit-report-${REPORT_TAG}-ingress
  namespace: ${TARGET_HOST_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "${TARGET_HOST_INGRESS_CLASS}"
spec:
  virtualhost:
    fqdn: ${TARGET_HOST}
    tls:
      secretName: ${TARGET_HOST_SECRET_NAME}
  includes:
  - name: audit-report-${REPORT_TAG}-httpproxy-routes
    namespace: ${TARGET_HOST_NAMESPACE}
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: audit-report-${REPORT_TAG}-httpproxy-routes
  namespace: ${TARGET_HOST_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "${TARGET_HOST_INGRESS_CLASS}"
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: audit-report-${REPORT_TAG}-service
          port: 80
